--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,26 @@
   position: fixed;
   overflow: hidden;
   z-index: 900;
+  transition: 2s;
 }
+.abajo {
+  width: 99%;
+  height: 70px;
+  background-color: rgb(0, 96, 15,0.6);
+  position: fixed;
+  overflow: hidden;
+  z-index: 900;
+  border-radius: 29px;
+  margin: 5px;
+}
+
 .nav {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .icono {
   width: 160px;
@@ -36,7 +49,8 @@
 .nav__icon {
   flex-grow: 0.98;
   height: 100%;
-  margin-top: -30px;
+  display: flex;
+  align-items: center;
 }
 .nav__lista {
   flex-grow: 1;
@@ -52,6 +66,26 @@
   color: var(--text);
   font-size: larger;
   font-weight: bold;
+  transition: 2.5;
+}
+.nav__lista-ul-li a:hover{
+  color: var(--color_secundary);
+}
+.abajo a{
+  color: var(--color_primary);
+  transition: 1s;
+}
+.abajo a:hover{
+  color: var(--text);
+}
+.abajo img{
+  filter: brightness(117%) saturate(0%) contrast(448%) invert(100%);
+-webkit-filter: brightness(117%) saturate(0%) contrast(448%) invert(100%);
+-moz-filter: brightness(117%) saturate(0%) contrast(448%) invert(100%);
+transition: 1s;
+}
+.abajo img:hover{
+filter: none;
 }
 /* -------------------------------------------------------------------------- */
 .redes_sociles {
