--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,7 @@
 }
 .acerca_de_mi_p p {
   text-align: justify;
+  font-size: large;
 }
 
 .titulo_acerca_de_mi {
@@ -397,7 +398,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  
+
   padding: 0 10px;
 }
 .div_texto_tarjeta h2 {
@@ -408,7 +409,7 @@
   text-align: justify;
   color: #1f1f1f;
 }
-.div_texto_tarjeta a{
+.div_texto_tarjeta a {
   width: 40%;
   height: 15%;
   margin: 0 auto;
@@ -422,7 +423,7 @@
   background-color: #00600ec4;
   color: var(--color_primary);
 }
-.div_texto_tarjeta button:hover{
+.div_texto_tarjeta button:hover {
   background-color: #00600f;
   color: var(--color_primary);
   cursor: pointer;
@@ -445,4 +446,82 @@
   width: 100%;
   height: 100%;
   margin: auto;
+}
+/* -------------------------------------------- */
+.contacto {
+  display: flex;
+  height: calc(100vh - 100px);
+  width: 100%;
+  background-color: var(--color_primary);
+  overflow: hidden;
+  padding-top: 100px;
+}
+.contenedor_contacto {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.contenedor_contacto form {
+  display: flex;
+  height: 90%;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 17px;
+  box-shadow: 0px 0px 60px -28px rgba(0, 96, 15, 0.75);
+  padding: 10px;
+}
+.form_mesaje{
+  width: 50%;
+  text-align: center;
+}
+.form_mesaje h1{
+  font-size: xx-large;
+  padding-bottom: 7px;
+  color: var(--color_secundary);
+}
+.form_input{
+  width: 60%;
+}
+.form_input input{
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 96, 15, 0.75);
+  padding-left: 5px;
+}
+.form_input label{
+  display: block;
+}
+.form_input_mensaje{
+  width: 60%;
+  height: 70px;
+}
+.form_input_mensaje textarea{
+  width: 100%;
+  height: 70px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 96, 15, 0.75);
+  padding-left: 5px;
+}
+.form_input_mensaje label{
+  display: block;
+}
+.contenedor_contacto button{
+  width: 30%;
+  height: 10%;
+  border-radius: 50px;
+  border: none;
+  background-color: #00600ec4;
+  color: var(--color_primary);
+  margin: 17px 0;
+}
+.contenedor_contacto button:hover{
+  background-color: #00600f;
+  color: var(--color_primary);
+  cursor: pointer;
 }
